fix overlap pls

--- a/css/screen.css
+++ b/css/screen.css
@@ -245,11 +245,19 @@ form {
   width: 90%;
 }
 
+
 h1 {
+  display: block;
   font-size: 3rem;
+  font-weight: normal;
   line-height: 1.2;
+  letter-spacing: 0.5px;
+  text-align: center;
   margin-bottom: 1rem;
+  white-space: normal; 
 }
+
+
 
 
 p {
